kube/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-infrastructure-dpl
  labels:
    app: cloud-infrastructure-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloud-infrastructure-app
  template:
    metadata:
      labels:
        app: cloud-infrastructure-app
    spec:
      containers:
        - name: cloud-infrastructure-ctn
          image: rodrigojbcs/cloud-infrastructure:202308251916-54c3ed3
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
          resources:
            requests:
              memory: "100Mi"
              cpu: "5m"
            limits:
              memory: "256Mi"
              cpu: "20m"
