kube/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloud-infrastructure-svc
  labels:
    app: cloud-infrastructure-app
spec:
  type: ClusterIP
  selector:
    app: cloud-infrastructure-app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
