kube/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
  labels:
    app: mysql-app
spec:
  selector:
    app: mysql-app
  ports:
    - name: "3306"
      port: 3306
